Source/WebCore/rendering/svg/RenderSVGContainer.cpp
@@ -65,7 +65,7 @@ void RenderSVGContainer::layout()
     SVGRenderSupport::layoutChildren(this, selfNeedsLayout());
 
     // Invalidate all resources of this client if our layout changed.
-    if (m_everHadLayout && selfNeedsLayout())
+    if (m_everHadLayout && needsLayout())
         SVGResourcesCache::clientLayoutChanged(this);
 
     // At this point LayoutRepainter already grabbed the old bounds,
