Source/WebCore/rendering/svg/SVGResourcesCache.cpp
@@ -119,7 +119,10 @@ void SVGResourcesCache::clientLayoutChanged(RenderObject* object)
     if (!resources)
         return;
 
-    resources->removeClientFromCache(object);
+    // Invalidate the resources if either the RenderObject itself changed,
+    // or we have filter resources, which could depend on the layout of children.
+    if (object->selfNeedsLayout() || resources->filter())
+        resources->removeClientFromCache(object);
 }
 
 void SVGResourcesCache::clientStyleChanged(RenderObject* renderer, StyleDifference diff, const RenderStyle* newStyle)
